# citris

./: AUTHORS  Makefile.am  README  TODO  autogen.sh  citris.6  citris.spec.in  configure.in
data/: Makefile.am
debian/: Makefile.am  changelog  control  copyright  rules
src/: Makefile.am  ai.c  ai.h  eventengine.c  eventengine.h  extro.c  extro.h  game.c  game.h  gamefield.c  gamefield.h  gameover.c  gameover.h  global.h  intro.c  intro.h  keyaction.c  keyaction.h  keyhandler.c  keyhandler.h  keynames.c  keynames.h  menu.c  menu.h  mousemove.c  mousemove.h  quit.c  quit.h  sdl.c  shapes.c  shapes.h  states.c  states.h  tetris.c  tetris.h  timer.c  timer.h  update.c  update.h  util.c  (+1 more)
